Fix title not being readable

--- a/Behave-dark.css
+++ b/Behave-dark.css
@@ -40,7 +40,7 @@
   --text-error: #EF4D44;
   --text-error-hover: #EF4D44;
   --text-selection: #434D5B;
-  --text-on-accent: #232932;
+  --text-on-accent: #434D5B;
   --interactive-normal: #FACB68; 
   --interactive-hover: #EF4D44;
   --interactive-accent: #61D29D;
